--- a/RazorPages/RazorPages.csproj
+++ b/RazorPages/RazorPages.csproj
@@ -1,8 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>84c92be4-2725-45d4-a962-14da3ed40e28</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="DataLibrary">
+      <HintPath>DataLibrary.dll</HintPath>
+    </Reference>
+	  <PackageReference Include="Dapper" Version="2.0.90" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.3" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
