--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="DataLibrary">
+      <HintPath>..\RazorPages\DataLibrary.dll</HintPath>
+    </Reference>
+	  <PackageReference Include="Dapper" Version="2.0.90" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.3" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
 
 </Project>
